<resources>
    <string name="app_name">MLM Pro</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="login_header">Login to your Account</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="login_btn">Sign In</string>
    <string name="account_no">Don\'t have an account?</string>
    <string name="signup_btn">Sign Up</string>
    <string name="regitser_header">Create your Account</string>
    <string name="email_hint">E-mail</string>
    <string name="name_hint">Name</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="invalid_mobile">Invalid Mobile</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_psw">Invalid Password</string>
    <string name="loading">Please wait ...</string>
    <string name="enter_invite">Enter Invite Code</string>
    <string name="apply_invite_text">If your were invited to MLM pro by a friend, just enter the invite code sent to your email ID to redeem your cashback offer.</string>
    <string name="confirm">Confirm</string>
    <string name="skip_btn">Skip</string>
    <string name="enter_invite_code">Enter Invite Code</string>
    <string name="required_error_invite">Invite code is required</string>
    <string name="profile_invite">Profile Information</string>
    <string name="whatsapp_number">WhatsApp Number</string>
    <string name="company_name">Company Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="create_account">Create Account</string>
    <string name="home">Home</string>
    <string name="feature">Feature</string>
    <string name="logout">Logout</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="software">Software Development</string>
    <string name="graphics">Graphic Designing</string>
    <string name="video">Video Editing</string>
    <string name="legal">Legal</string>
    <string name="social_media_marketing">Social Media Marketing</string>
    <string name="service">Services</string>
    <string name="graphics_sub_text">We take care of all your design needs.</string>
    <string name="pdf">PDF</string>
    <string name="ppt">PPT</string>
    <string name="logo">Logo</string>
    <string name="poster">Poster</string>
    <string name="call_enquiry">Call Enquiry</string>
    <string name="whatsapp_enquiry">WhatsApp Enquiry</string>
    <string name="software_sub_text">Always enabling you to go digital</string>
    <string name="legal_service">Company Legal Services</string>
    <string name="legal_sub_text">Helping you stay on top of all your legal needs</string>
    <string name="video_editing">Video Editing</string>
    <string name="video_editing_sub">Professional Video Editing has never been so easy!</string>
    <string name="social_media_marketing_sub">Reaching out to your audience has never been easier</string>
    <string name="post">Post</string>
    <string name="post_hint">Whats on your mind ?</string>
    <string name="new_post_heading">Create Post</string>
    <string name="likes">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="wallet">Wallet</string>
    <string name="balance">Balance</string>
    <string name="recent_trans">Recent Transactions</string>
    <string name="ecommerce">"E-Commerce\n"</string>
    <string name="school_management">School Management</string>
    <string name="hotel_management">Hotel Management</string>
    <string name="resturent">"Restaurant\n"</string>
    <string name="rd_software"><![CDATA[RD & FD Software]]></string>
    <string name="binary_plan">"Binary\nPlan"</string>
    <string name="help_plan">Help Plan</string>
    <string name="metrix_plan">Matrix Plan</string>
    <string name="purchase_plan">Repurchase Plan</string>
    <string name="call_to_number">7024889404</string>
    <string name="whatsapp_to_number">7024889404</string>
    <string name="refer">Refer</string>
    <string name="reward">Rewards</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refer_heading">Refer MLM Pro to your friends and family and earn guaranteed cashback rewards</string>
    <string name="refer_sub_text">On every successful referral you receive Rs.100 cashback, while your friends receive Rs.50 cashback upon downloading using your invite link.</string>
    <string name="subscription">Subscriptions</string>
    <string name="mlm_company_list">MLM Company List</string>
    <string name="fill_in_blanks">Fill in the details</string>
    <string name="add">Add</string>
    <string name="top_Company_network">Top Company network</string>
    <string name="top_mlm">Top MLM Trainer</string>
    <string name="company_top_leader">Company Top Leader</string>
    <string name="mlm_seminar_update">MLM Training seminar update</string>
    <string name="company_plan_details">Company Plan Details</string>
    <string name="current_growth">Current Growth Company</string>
    <string name="fast_courier">Fast Courier Service</string>
    <string name="mlm_product_ser_provd">Mlm Product Service Provider</string>
    <string name="mlm_manu">Product Manufacturing</string>
    <string name="youtube_v">"Youtube\nVideo"</string>
    <string name="animation_v">"Animation\nVideo"</string>
    <string name="whiteboard">"Whiteboard\nAnimation"</string>
    <string name="slide_v">"Slide Show\nVideo"</string>
    <string name="logout_message">Are you sure want to logout</string>
    <string name="checkout">Checkout</string>
    <string name="subscription_details">Subscription details</string>
    <string name="subscription_amount">Subscription Value</string>
    <string name="payable">Total</string>
    <string name="pay">Proceed to pay</string>
    <string name="razp_key">rzp_test_oA8jljoWLXyICO</string>
    <string name="razp_live_key">rzp_live_0ZJ7M4ccBHYfwp</string>
    <string name="otp_verify">Please enter OTP sent to your mobile number</string>
    <string name="verify">Verify</string>
    <string name="company_registeration">Company Registration</string>
    <string name="pan_card">Company PAN Card</string>
    <string name="registerion">"NGO\nRegistration"</string>
    <string name="gst_management">"GST\nManagement"</string>
    <string name="company_audit">"Company\nAudit"</string>
    <string name="itr">"Income Tax\nReturn"</string>
    <string name="company_annual_return">Company Annual Return</string>
    <string name="sendbird_id">C17BE961-C770-404E-B58E-F1F7D8E125A9</string>
    <string name="company_plan">Upload company plan</string>
    <string name="upload_pdf">Upload Pdf</string>
    <string name="upload_videos">Upload Videos</string>
    <string name="proceed">Proceed</string>
    <string name="forget_psw">Forget Password ?</string>
    <string name="update_profile">Update profile</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="website">Enter Website</string>
    <string name="cloud_name">dlyuhnc8i</string>
    <string name="no_notification">Notificaton  not found</string>
    <string name="notification">Notification</string>

</resources>