<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. Hackdroid https://github.com/raza11409652
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ApplyInvitationCode">

    <include
        android:id="@+id/toolbar"
        layout="@layout/appbar_white"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/parent_padding"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_invite"
            android:textColor="@color/black"
            android:textSize="@dimen/size_20"
            android:textStyle="bold"></TextView>

        <TextView
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_80"
            android:text="@string/apply_invite_text"></TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:clipToPadding="true"
            app:cardCornerRadius="@dimen/input_corner_radius"
            app:cardUseCompatPadding="true">

            <EditText
                android:id="@+id/invite_code"
                android:hint="@string/enter_invite_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_input"
                android:inputType="textPersonName"
                android:textAllCaps="true"></EditText>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/parent_padding"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"></Button>

        <Button
            android:id="@+id/skip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/skip_btn"></Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>