<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/parent_padding"
    tools:context=".activity.Login">

    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="@dimen/size_160"
        android:layout_height="@dimen/size_160"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <TextView
        android:textStyle="bold"
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/login_header"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/company_logo"></TextView>
    <!--    <EditText-->
    <!--        android:background="@drawable/background_input"-->
    <!--        android:layout_marginTop="@dimen/margin_top"-->
    <!--        android:id="@+id/mobile"-->
    <!--        android:inputType="number"-->
    <!--        android:hint="@string/mobile"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/login_header"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"></EditText>-->
    <androidx.cardview.widget.CardView
        android:id="@+id/mobile_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:clipToPadding="true"
        app:cardCornerRadius="@dimen/input_corner_radius"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_header">

        <EditText
            android:id="@+id/mobile_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_input"
            android:hint="@string/mobile"
            android:inputType="number"></EditText>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/password_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:clipToPadding="true"
        app:cardCornerRadius="@dimen/input_corner_radius"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobile_input_container">

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:inputType="textPassword"></EditText>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_top"
            android:text="@string/login_btn"></Button>

        <include layout="@layout/horizontal_line"></include>

        <TextView
            android:layout_marginBottom="@dimen/size_10"
            android:layout_marginTop="@dimen/size_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_no"
            android:textAlignment="center"
            android:textColor="@color/text_secondary_color"></TextView>
        <Button
            android:id="@+id/register_btn"
            android:text="@string/signup_btn"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Button>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>