<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Register">

    <include
        android:id="@+id/toolbar"
        layout="@layout/appbar_white"></include>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/parent_padding"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regitser_header"
                android:textColor="@color/black"
                android:textSize="@dimen/size_20"
                android:textStyle="bold"></TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:clipToPadding="true"
                app:cardCornerRadius="@dimen/input_corner_radius"
                app:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_input"
                    android:hint="@string/name_hint"
                    android:inputType="textPersonName"></EditText>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:clipToPadding="true"
                app:cardCornerRadius="@dimen/input_corner_radius"
                app:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_input"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"></EditText>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginBottom="@dimen/margin_top"
                android:clipToPadding="true"
                app:cardCornerRadius="@dimen/input_corner_radius"
                app:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_input"
                    android:hint="@string/mobile"
                    android:inputType="number"></EditText>
            </androidx.cardview.widget.CardView>

            <include layout="@layout/horizontal_line"></include>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:clipToPadding="true"
                app:cardCornerRadius="@dimen/input_corner_radius"
                app:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_input"
                    android:hint="@string/enter_password"
                    android:inputType="number"></EditText>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"

                android:clipToPadding="true"
                app:cardCornerRadius="@dimen/input_corner_radius"
                app:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/password_input_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_input"
                    android:hint="@string/password_confirm"
                    android:inputType="number"></EditText>
            </androidx.cardview.widget.CardView>
            <Button
                android:layout_marginTop="@dimen/size_70"
                android:text="@string/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Button>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>