<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. Hackdroid https://github.com/raza11409652
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/parent_padding"
    tools:context=".activity.CompleteProfile">

    <TextView
        android:layout_marginTop="@dimen/size_60"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_invite"
        android:textColor="@color/black"
        android:textSize="@dimen/size_20"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <ImageButton
        android:id="@+id/image_uploader"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@color/white"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"></ImageButton>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/image_uploader">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:clipToPadding="true"
            app:cardUseCompatPadding="true">

            <EditText

                android:id="@+id/whatsapp_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_input"
                android:hint="@string/whatsapp_number"
                android:inputType="number"></EditText>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:clipToPadding="true"
            app:cardUseCompatPadding="true">

            <EditText
                android:id="@+id/company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_input"
                android:hint="@string/company_name"
                android:inputType="textPersonName"></EditText>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <androidx.cardview.widget.CardView
                app:cardUseCompatPadding="true"
                android:clipToPadding="true"
                android:layout_weight="1"
                android:layout_width="0sp"
                android:layout_height="wrap_content">
                <EditText
                    android:inputType="textPersonName"
                    android:id="@+id/state"
                    android:hint="@string/state"
                    android:background="@drawable/background_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></EditText>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                app:cardUseCompatPadding="true"
                android:clipToPadding="true"
                android:layout_weight="1"
                android:layout_width="0sp"
                android:layout_height="wrap_content">
                <EditText
                    android:inputType="textPersonName"
                    android:id="@+id/country"
                    android:hint="@string/country"
                    android:background="@drawable/background_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></EditText>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/parent_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/create_btn"
            android:text="@string/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Button>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>